# Jokes

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  justfile  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: test.yml  test_and_check.yml
src/jokes/: app.py  joke.py  options.py  request.py  requests.py
src/jokes/models/: __init__.py  error.py  flags.py  joke.py  params.py  response.py  responses.py
src/jokes/pipelines/: get_pipeline.py  submit_pipeline.py
src/jokes/requests/: get.py  submit.py
src/jokes/utils/: messages.py  params.py  urls.py
tests/: conftest.py  factories.py  test_build_endpoint_url.py  test_cli.py  test_requests.py  test_responses.py
tests/jokes/: test_api_response.py  test_cli.py  test_joke.py  test_models.py  test_request.py
tests/utils/: test_urls.py
