[tool.poetry]
name = "jokes"
version = "0.1.0"
description = "Little CLI for telling jokes."
authors = ["te25son <te25son@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
click = "^8.1.3"
mypy = "^0.961"
returns = "^0.19.0"
python-dotenv = "^0.20.0"
pytest = "^7.1.2"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"

[tool.poetry.scripts]
jokes = "jokes.app:jokes"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
