[tool.poetry]
name = "jokes"
version = "0.1.0"
description = "Little CLI for telling jokes."
authors = ["te25son <te25son@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
click = "^8.1.3"
returns = "^0.19.0"
python-dotenv = "^0.20.0"
pydantic = "^1.9.1"

[tool.poetry.scripts]
jokes = "jokes.app:jokes"

[tool.poetry.group.dev.dependencies]
mypy = "^0.961"
pylint = "^2.14.4"
pytest = "^7.2.0"
pytest-httpx = "^0.21.1"
nox = "^2022.8.7"
black = "^22.10.0"
pytest-cov = "^4.0.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pydantic-factories = "^1.13.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["jokes"]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = ["if TYPE_CHECKING:"]

[tool.isort]
profile = "google"
order_by_type = true
force_single_line = false
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
